# drogonstarter

./: cookiecutter.json
{{cookiecutter.project_slug}}/: CMakeLists.txt  vcpkg.json
{{cookiecutter.project_slug}}/src/: main.cc
